<resources>
    <string name="app_name">HelloSewa</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="search_text">Search</string>
    <string name="product_image_slider">Product Image Slider</string>
    <string name="shampoo">Shampoo</string>
    <string name="hair_color">Hair Color</string>
    <string name="oil">Oil</string>
    <string name="soap">Soap</string>
    <string name="device">Device</string>
    <string name="currency">Rs.</string>
    <string name="_700">700</string>
    <string name="popular_product">Popular Product</string>
    <string name="product_on_sale">Product on sale</string>
    <string name="total_rs_2000">Total Rs. </string>
    <string name="checkout">Checkout</string>
    <string name="_2000">2000</string>
    <string name="all">All</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="hellosewa">HelloSewa</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your Password ?</string>
    <string name="or_login_with">or login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="facebook_login">Facebook login</string>
    <string name="google_login">Google login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>
