<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".homeFragment.Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guidline_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidline_medium" />

            <ImageView
                android:id="@+id/slider_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/product_image_slider"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/forslider"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/search_home"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_layout_height"
                android:layout_marginStart="@dimen/margin_search"
                android:layout_marginEnd="@dimen/margin_search"
                android:background="@drawable/search_home_bg"
                android:drawableStart="@drawable/ic_search"
                android:gravity="center"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="16dp"
                android:text="@string/search_text"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/slider_image"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/slider_image"
                app:layout_constraintVertical_bias="0.100000024" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/category_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/slider_image">

                <ImageView
                    android:id="@+id/shampoo_catg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_shampoo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shampoo"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/shampoo_catg"
                    app:layout_constraintStart_toStartOf="@+id/shampoo_catg"
                    app:layout_constraintTop_toBottomOf="@+id/shampoo_catg" />

                <ImageView
                    android:id="@+id/hair_color_catg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_hair_color"
                    app:layout_constraintBottom_toBottomOf="@+id/shampoo_catg"
                    app:layout_constraintStart_toEndOf="@+id/shampoo_catg"
                    app:layout_constraintTop_toTopOf="@+id/shampoo_catg" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/hair_color_catg"
                    app:layout_constraintStart_toStartOf="@+id/hair_color_catg"
                    app:layout_constraintTop_toBottomOf="@+id/hair_color_catg" />

                <ImageView
                    android:id="@+id/oil_catg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_oil"
                    app:layout_constraintBottom_toBottomOf="@+id/shampoo_catg"
                    app:layout_constraintStart_toEndOf="@+id/hair_color_catg"
                    app:layout_constraintTop_toTopOf="@+id/shampoo_catg"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oil"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/oil_catg"
                    app:layout_constraintStart_toStartOf="@+id/oil_catg"
                    app:layout_constraintTop_toBottomOf="@+id/oil_catg" />

                <ImageView
                    android:id="@+id/soap_catg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_shop"
                    app:layout_constraintBottom_toBottomOf="@+id/shampoo_catg"
                    app:layout_constraintStart_toEndOf="@+id/oil_catg"
                    app:layout_constraintTop_toTopOf="@+id/shampoo_catg"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soap"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/soap_catg"
                    app:layout_constraintStart_toStartOf="@+id/soap_catg"
                    app:layout_constraintTop_toBottomOf="@+id/soap_catg" />

                <ImageView
                    android:id="@+id/device_catg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_device"
                    app:layout_constraintBottom_toBottomOf="@+id/shampoo_catg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/soap_catg"
                    app:layout_constraintTop_toTopOf="@+id/shampoo_catg"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/device_catg"
                    app:layout_constraintStart_toStartOf="@+id/device_catg"
                    app:layout_constraintTop_toBottomOf="@+id/device_catg" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/category_container">

                <TextView
                    android:id="@+id/product_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/popular_product"
                    android:textColor="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_label"
                    tools:listitem="@layout/product_single_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ads"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/product_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sale_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_on_sale"
                    android:textColor="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    tools:listitem="@layout/product_single_list" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>